<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="select_tip">Tip: </string>
    <string name="bill_amount">Bill Amount: </string>
    <string name="amount_hint">Enter bill amount</string>
    <string name="percent_hint">0.0</string>
    <string name="percent_symbol">%</string>
    <string name="tip_percent">Tip Percent : </string>
    <string name="tip_amount_hint">0.00</string>
    <string name="tip_amount">Tip Amount : </string>
    <string name="total_amount">Total Amount : </string>
    <string name="total_amount_value">0.00</string>
    <string name="enable_split">Split: </string>
    <string name="number_of_splits"># Splits: </string>
    <string name="bill_description">Description: </string>
    <string name="save">Save Bill</string>
    <string name="cancel">Cancel</string>
    <string name="add_plus">+</string>
    <string name="add_bill_text">Calculate tip, add new bill</string>
    
    <string name="title_activity_bill_calculate">BillCalculateActivity</string>

</resources>
