<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent" >

    <TextView
        android:id="@+id/tvItemTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="30sp"
        android:text="@string/total_amount_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvItemDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:text="@string/bill_description"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvItemBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingTop="5dp"
        android:paddingLeft="5dp"
        android:layout_below="@+id/tvItemDescription"
        android:text="@string/tip_amount_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvItemTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvItemBillAmount"
        android:layout_alignBottom="@+id/tvItemBillAmount"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/tvItemBillAmount"
        android:text="@string/percent_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
